--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 <nav>
     <a href="{{ url_for('index') }}">Início</a>
     <a href="{{ url_for('consulta') }}">Consulta</a>
-    <a href="{{ url_for('registro/troca') }}">Registro</a>
+    <a href="{{ url_for('registro') }}">Registro</a>
 </nav>
 
 <div class="content">
