--- a/templates/registro.html
+++ b/templates/registro.html
@@ -11,24 +11,27 @@
         <input type="text" id="marca" name="marca" required>
 
         <label for="placa">Placa do Veículo:</label>
-        <input type="text" id="placa" name="placa" required>
+        <input type="text" id="placa" name="placa" maxlength="7" minlength="7"
+        placeholder="ABC1234 ou ABC1D34 (mercosul)" size="25" title="Formato válido: ABC1234 ou ABC1D34 (mercosul)"
+        pattern="[A-Za-z]{3}[0-9]{4}|[A-Za-z]{3}[0-9][A-Za-z][0-9]{2}" required>
 
         <label for="data_troca">Data da Troca:</label>
         <input type="date" id="data_troca" name="data_troca" required>
 
         <label for="km_troca">Quilometragem atual:</label>
-        <input type="number" id="km_troca" name="km_troca" required>
+        <input type="number" id="km_troca" name="km_troca" maxlength="7" minlength="5" required>
         
         <label for="data_proxima">Data da próxima troca:</label>
         <input type="date" id="data_proxima" name="data_proxima" required>
 
 
         <label for="km_proxima">Quilometragem para próxima troca:</label>
-        <input type="number" id="km_proxima" name="km_proxima" required>
+        <input type="number" id="km_proxima" name="km_proxima" maxlength="7" required>
 
         <label for="oficina_responsavel">Oficina Responsável:</label>
         <input type="text" id="oficina_responsavel" name="oficina_responsavel" required>
 
         <button type="submit">Registrar Troca</button>
+        <h2>{{ msg }}</h2>
     </form>
 {% endblock %}
