--- a/templates/base.html
+++ b/templates/base.html
@@ -6,12 +6,29 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-
+   
 <nav>
     <a href="{{ url_for('index') }}">Início</a>
+    <a href="{{ url_for('cadastro') }}">Cadastro</a>
     <a href="{{ url_for('consulta') }}">Consulta</a>
-    <a href="{{ url_for('registro') }}">Registro</a>
+    {% if session.get('usuario_id') %}
+    <a href="{{ url_for('registro') }}">Registrar troca</a>
+    <a href="{{ url_for('logout') }}">Logout</a>
+    {% else %}
+    <a href="{{ url_for('login') }}">Login</a>
+    {% endif %}
 </nav>
+ {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+    <div class="flash-container">
+      {% for category, msg in messages %}
+        <div class="flash {{ category }}">
+          {{ msg }}
+        </div>
+      {% endfor %}
+    </div>
+    {% endif %}
+    {% endwith %}
 
 <div class="content">
     {% block content %}{% endblock %}
