func - fabricante e modelo separados no front, bug fix none {marca,modelo}

--- a/templates/consulta.html
+++ b/templates/consulta.html
@@ -44,9 +44,12 @@
                         <value>{{ oficina }}</value>
                     </div>
                     <div class="trade-field">
-                        <label>Marca e Modelo</label>
-                        <value>{{ marca }} {{ modelo }}</value>
+                        <label>Fabricante</label>
+                        <value>{{ marca }}</value>  
                     </div>
+                    <div class="trade-field">
+                        <label>Modelo</label>
+                        <value>{{ modelo }}</value>
                 </div>
             </div>
         </div>
