--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -29,14 +29,16 @@
                 <small style="color: #7f8c8d; margin-top: 0.25rem; display: block;">Solicite o token ao administrador do sistema</small>
             </div>
 
-            <div class="btn-group">
-                <a href="https://wa.me/5551980547521?text=Token%20de%20Cadastro%20para%20Minha%20Correia" target="_blank" class="btn btn-success">Solicitar Token</a>
-            </div>
             
             <div class="btn-group">
                 <button type="submit" class="btn btn-primary">Criar Conta</button>
                 <a href="{{ url_for('index') }}" class="btn">Cancelar</a>
             </div>
+
+            <div class="btn-group">
+                <a href="https://wa.me/5551980547521?text=Token%20de%20Cadastro%20para%20Minha%20Correia" target="_blank" class="btn btn-outline">Solicitar Token</a>
+            </div>
+            
         </form>
 
         <p style="margin-top: 2rem; text-align: center;">
